@@ -49,6 +49,7 @@ public class NodeLabelsPage extends RmView {
           thead().
           tr().
           th(".name", "Label Name").
+          th(".type", "Label Type").
           th(".numOfActiveNMs", "Num Of Active NMs").
           th(".totalResource", "Total Resource").
           _()._().
@@ -58,8 +59,12 @@ public class NodeLabelsPage extends RmView {
       for (RMNodeLabel info : nlm.pullRMNodeLabelsInfo()) {
         TR<TBODY<TABLE<Hamlet>>> row =
             tbody.tr().td(
-                info.getLabelName().isEmpty() ? "<NO_LABEL>" : info
+                info.getLabelName().isEmpty() ? "<DEFAULT_PARTITION>" : info
                     .getLabelName());
+        String type =
+            (info.getIsExclusive()) ? "Exclusive Partition"
+                : "Non Exclusive Partition";
+        row = row.td(type);
         int nActiveNMs = info.getNumActiveNMs();
         if (nActiveNMs > 0) {
           row = row.td()
