@@ -269,6 +269,9 @@ Release 2.8.0 - UNRELEASED
     YARN-20. More information for "yarn.resourcemanager.webapp.address" in 
     yarn-default.xml (Bartosz Ługowski vai tgraves)
 
+    YARN-3593. Add label-type and Improve "DEFAULT_PARTITION" in Node Labels Page. 
+    (Naganarasimha G R via wangda)
+
   OPTIMIZATIONS
 
     YARN-3339. TestDockerContainerExecutor should pull a single image and not
